# ros_autoware

./: PROJECT_NOTES.md  README.md  project notes.docx  ~$oject notes.docx
Arduino Libraries/Rosserial_Arduino_Library/: keywords.txt  library.properties  readme.md
Arduino Libraries/Rosserial_Arduino_Library/src/: ArduinoHardware.h  ArduinoIncludes.h  Esp8266Hardware.h  ros.h
Arduino Libraries/Rosserial_Arduino_Library/src/actionlib/: TestAction.h  TestActionFeedback.h  TestActionGoal.h  TestActionResult.h  TestFeedback.h  TestGoal.h  TestRequestAction.h  TestRequestActionFeedback.h  TestRequestActionGoal.h  TestRequestActionResult.h  TestRequestFeedback.h  TestRequestGoal.h  TestRequestResult.h  TestResult.h  TwoIntsAction.h  TwoIntsActionFeedback.h  TwoIntsActionGoal.h  TwoIntsActionResult.h  TwoIntsFeedback.h  TwoIntsGoal.h  TwoIntsResult.h
Arduino Libraries/Rosserial_Arduino_Library/src/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
Arduino Libraries/Rosserial_Arduino_Library/src/actionlib_tutorials/: AveragingAction.h  AveragingActionFeedback.h  AveragingActionGoal.h  AveragingActionResult.h  AveragingFeedback.h  AveragingGoal.h  AveragingResult.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h
Arduino Libraries/Rosserial_Arduino_Library/src/bond/: Constants.h  Status.h
Arduino Libraries/Rosserial_Arduino_Library/src/control_msgs/: FollowJointTrajectoryAction.h  FollowJointTrajectoryActionFeedback.h  FollowJointTrajectoryActionGoal.h  FollowJointTrajectoryActionResult.h  FollowJointTrajectoryFeedback.h  FollowJointTrajectoryGoal.h  FollowJointTrajectoryResult.h  GripperCommand.h  GripperCommandAction.h  GripperCommandActionFeedback.h  GripperCommandActionGoal.h  GripperCommandActionResult.h  GripperCommandFeedback.h  GripperCommandGoal.h  GripperCommandResult.h  JointControllerState.h  JointTolerance.h  JointTrajectoryAction.h  JointTrajectoryActionFeedback.h  JointTrajectoryActionGoal.h  JointTrajectoryActionResult.h  JointTrajectoryGoal.h  (+20 more)
Motor Driver/: Wheelchair_ROS_Xbox.ino  Wheelchair_ROS_Xbox_Auto.ino  teleop_twist_joy.cpp
camera/: camera.cpp  draw_points.cpp
fake_gps/: CMakeLists.txt  README.md  package.xml
fake_gps/include/: fake_gps_node.h
fake_gps/src/: fake_gps_node.cpp
teleop_twist_joy/: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  README.md  package.xml
teleop_twist_joy/config/: atk3.config.yaml  ps3-holonomic.config.yaml  ps3.config.yaml  xbox.config.yaml  xd3.config.yaml
teleop_twist_joy/include/teleop_twist_joy/: teleop_twist_joy.h
teleop_twist_joy/launch/: teleop.launch
teleop_twist_joy/src/: teleop_node.cpp  teleop_twist_joy-old.cpp  teleop_twist_joy.cpp
teleop_twist_joy/test/: differential_joy.test  holonomic_joy.test  no_enable_joy.test  only_turbo_joy.test  six_dof_joy.test  test_joy_twist.py  turbo_angular_enable_joy.test  turbo_angular_enable_joy_with_rosparam_map.test  turbo_enable_joy.test
(+278 files in other folders)
