<?xml version="1.0"?>
<package>
  <name>fake_gps</name>
  <version>0.0.0</version>
  <description>Generic fake gps and publish to gnss_pose.</description>
  <maintainer email="developmentblueskyrobotics@gmail.com">Ethan Pang</maintainer>

  <license>BSD</license>
  <author email="developmentblueskyrobotics@gmail.com">Ethan Pang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
